--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js",
+        "start": "node src/server.js",
+        "dev": "node src/server.js",
         "test": "jest",
         "lint": "eslint src/",
         "lint:fix": "eslint src/ --fix"
@@ -23,25 +23,25 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.450.0",
         "@aws-sdk/s3-request-presigner": "^3.450.0",
-        "bcryptjs": "^2.4.3",
+        "bcryptjs": "^3.0.3",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
-        "express": "^4.18.2",
+        "dotenv": "^17.2.3",
+        "express": "^5.2.1",
         "express-rate-limit": "^7.1.5",
         "firebase-admin": "^11.11.1",
-        "helmet": "^7.1.0",
-        "joi": "^17.11.0",
+        "helmet": "^8.1.0",
+        "joi": "^18.0.2",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
-        "multer": "^1.4.5-lts.1",
-        "uuid": "^9.0.1",
+        "multer": "^2.0.1",
+        "uuid": "^13.0.0",
         "winston": "^3.11.0",
         "axios": "^1.6.2"
     },
     "devDependencies": {
         "eslint": "^8.55.0",
-        "jest": "^29.7.0",
+        "jest": "^30.2.0",
         "nodemon": "^3.0.2"
     },
     "engines": {
